# JVLinkServer

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: build-and-release.yml  docs.yml  python-package.yml
docs/: mkdocs.yml
docs/src/: index.md
docs/src/api/: index.md
docs/src/api/cpp/: index.md
docs/src/api/python/: client.md  codes.md  config.md  exceptions.md  index.md  responses.md  types.md
docs/src/appendix/: delivery-schedule.md  error-codes.md  historical-changes.md  jvlink-limitations.md  migration-notes.md
docs/src/code-tables/: basic-codes.md  condition-codes.md  horse-codes.md  index.md  jockey-codes.md  race-codes.md  racecourse-codes.md  result-codes.md
docs/src/data-specs/: index.md
docs/src/data-specs/realtime/: 0b11.md  0b12.md  0b13.md  0b14.md  0b15.md  0b16.md  0b17.md  0b20.md  0b30.md  0b31.md  0b32.md  0b33.md  0b34.md  0b35.md  0b36.md  0b41.md  0b42.md  0b51.md
docs/src/data-specs/storage/: blod.md  comm.md  diff.md  hose.md  hoyu.md  ming.md  race.md  rcov.md  slop.md  snap.md  tcov.md  toku.md  wood.md  ysch.md
docs/src/getting-started/: installation.md  prerequisites.md  quickstart.md
docs/src/guides/: cli.md  dataspec-usage.md  event-monitoring.md  examples.md  troubleshooting.md
docs/src/records/: av.md  bn.md  br.md  bt.md  cc.md  ch.md  ck.md  cs.md  dm.md  h1.md  h6.md  hc.md  hn.md  hr.md  hs.md  hy.md  index.md  jc.md  jg.md  ks.md  o1.md  o2.md  o3.md  o4.md  o5.md  o6.md  ra.md  race-cancellation-operations.md  rc.md  se.md  sk.md  tc.md  tk.md  tm.md  um.md  wc.md  we.md  wf.md  wh.md  ys.md
include/core/: com_thread_worker.h  jv_link_dispid.h  jv_link_error_codes.h  jv_link_event_sink.h  jv_link_wrapper.h
include/data/: record_parser.h
include/server/: api_version.h  openapi_handler.h  supervisor_http_server.h
python/: LICENSE  README.md  hatch_build.py  pyproject.toml
python/examples/: README.md
python/examples/advanced/: event_streaming_sse.py
python/examples/basic/: data_retrieval.py  event_streaming.py  health_check.py
python/examples/testing/: check_all_dataspecs.py
python/examples/tools/: generate_course_images.py  generate_uniform_images.py
python/scripts/codegen/: __main__.py  gen_field_tables.py  gen_formatter_meta.py  gen_registry.py  schema_loader.py
python/src/pyjvlink/: __init__.py  cli.py  codes.py  types.py
python/src/pyjvlink/_internal/: codes.py
python/src/pyjvlink/_internal/codecs/: record_decoder.py
python/src/pyjvlink/_internal/domain/: __init__.py
python/src/pyjvlink/_internal/domain/models/: __init__.py  av.py  bn.py  br.py  bt.py  cc.py  ch.py  ck.py  common.py  cs.py  dm.py  h1.py  h6.py  hc.py  hn.py  hr.py  hs.py  hy.py  jc.py  jg.py  ks.py  o1.py  o2.py  o3.py  o4.py  o5.py  o6.py  ra.py  rc.py  se.py  sk.py  tc.py  tk.py  tm.py  um.py  wc.py  we.py  wf.py  wh.py  ys.py
python/src/pyjvlink/_internal/domain/services/: __init__.py  race_id.py
python/src/pyjvlink/_internal/formatting/: __init__.py  pretty.py
python/src/pyjvlink/_internal/protocol/: __init__.py  enums.py  envelope.py  models.py  validators.py
python/src/pyjvlink/_internal/protocol/schema/: _common_header_fields.json  _common_race_fields.json  _meta.json  record_envelope.json
python/src/pyjvlink/_internal/protocol/schema/domain/: av.md  bn.md  br.md  bt.md  cc.md  ch.md  ck.md  cs.md  dm.md  h1.md  h6.md  hc.md  hn.md  hr.md  hs.md  hy.md  jc.md  jg.md  ks.md  o1.md  o2.md  o3.md  o4.md  o5.md  o6.md  ra.md  rc.md  se.md  sk.md  tc.md  tk.md  tm.md  um.md  wc.md  we.md  wf.md  wh.md  ys.md
python/src/pyjvlink/_internal/protocol/schema/records/: av.json  bn.json  br.json  bt.json  cc.json  ch.json  ck.json  cs.json  dm.json  h1.json  h6.json  hc.json  hn.json  hr.json  hs.json  hy.json  jc.json  jg.json  ks.json  o1.json  o2.json  o3.json  o4.json  o5.json  o6.json  ra.json  rc.json  se.json  sk.json  tc.json  tk.json  tm.json  um.json  wc.json  we.json  wf.json  wh.json  ys.json
python/src/pyjvlink/_internal/runtime/: __init__.py  process_manager.py  server_binary.py
python/src/pyjvlink/_internal/transport/: __init__.py  events.py  http_client.py  stream.py
python/src/pyjvlink/api/: __init__.py  client.py  models.py  types.py  validation.py
python/src/pyjvlink/codecs/: __init__.py
python/src/pyjvlink/errors/: __init__.py
python/src/pyjvlink/formatting/: __init__.py
python/src/pyjvlink/records/: __init__.py
python/tests/: conftest.py  test_api_client_facade.py  test_cli.py  test_codegen_freshness.py  test_codes.py  test_contract_boundary.py  test_dataspec_minimum_e2e.py  test_domain_race_id_service.py  test_errors.py  test_hatch_build.py  test_pretty_formatter.py  test_protocol_validators.py  test_public_exports.py  test_record_decoder.py  test_record_serialization.py  test_runtime_process_manager.py  test_runtime_server_binary.py  test_transport_streaming.py  test_types_config_validation.py
scripts/: export_public_snapshot.ps1  export_public_snapshot.sh
src/core/: com_thread_worker.cpp  jv_link_event_sink.cpp  jv_link_wrapper.cpp
src/data/: record_parser.cpp
src/data/records/: av_record.cpp  bn_record.cpp  br_record.cpp  bt_record.cpp  cc_record.cpp  ch_record.cpp  ck_record.cpp  cs_record.cpp  dm_record.cpp  h1_record.cpp  h6_record.cpp  hc_record.cpp  hn_record.cpp  hr_record.cpp  hs_record.cpp  hy_record.cpp  jc_record.cpp  jg_record.cpp  ks_record.cpp  o1_record.cpp  o2_record.cpp  o3_record.cpp  o4_record.cpp  o5_record.cpp  o6_record.cpp  ra_record.cpp  rc_record.cpp  se_record.cpp  sk_record.cpp  tc_record.cpp  tk_record.cpp  tm_record.cpp  um_record.cpp  wc_record.cpp  we_record.cpp  wf_record.cpp  wh_record.cpp  ys_record.cpp
src/server/: main.cpp  openapi_handler.cpp  supervisor_http_server.cpp
