[project]
name = "pyjvlink"
version = "0.8.2"
description = "JRA-VAN Data Lab JV-Link Python client"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Hiroki Taniai", email = "charmer.popopo@gmail.com" },
]
keywords = ["jv-link", "jra-van", "horse-racing", "jra", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "psutil>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/nyoki-mtl/JVLinkServer"
Repository = "https://github.com/nyoki-mtl/JVLinkServer"

[project.scripts]
pyjvlink = "pyjvlink.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyjvlink"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "ty>=0.0.19",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[tool.ruff]
line-length = 120
exclude = ["examples/", "docs/"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ty.environment]
python-version = "3.10"
root = ["./src"]

[tool.ty.src]
exclude = [
    "examples/**",
    "scripts/**",
    "tests/**",
    "hatch_build.py",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "ty>=0.0.19",
]
